--- a/FixItYourselfHospital/App.xaml
+++ b/FixItYourselfHospital/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:FixItYourselfHospital"
-             StartupUri="Forms/LoginWindow.xaml">
+             StartupUri="Forms/Windows/LoginWindow.xaml">
     <Application.Resources>
         <!--Create placeholder text in textbox-->
         <Style x:Key="placeHolderTextBox" TargetType="{x:Type TextBox}" BasedOn="{StaticResource {x:Type TextBox}}">
